--- a/public/turst.html
+++ b/public/turst.html
@@ -4,5 +4,10 @@
   <body>
     <script src="/jquery.js"></script>
     <script src="/turst.js"></script>
+    <form>
+      <input type="text" name="test">
+      <input type="submit" value="send">
+    </form>
+    <textarea rows="10" cols="80"></textarea>
   </body>
 </html>
