Convert turst to polysocket library

--- a/public/turst.html
+++ b/public/turst.html
@@ -3,6 +3,7 @@
   </head>
   <body>
     <script src="/jquery.js"></script>
+    <script src="/polysocket.js"></script>
     <script src="/turst.js"></script>
     <form>
       <input type="text" name="test">
