--- a/public/turst.html
+++ b/public/turst.html
@@ -2,7 +2,7 @@
   <head>
   </head>
   <body>
-    <script src="/jquery.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="/polysocket.js"></script>
     <script src="/turst.js"></script>
     <form>
